--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-streamlit
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
-pyod
-missingno
+streamlit>=1.40.0
+pandas>=2.1.0
+numpy>=1.26.0
+matplotlib>=3.8.0
+seaborn>=0.13.0
+scikit-learn>=1.3.0
+pyod>=1.1.3
+missingno>=0.5.2
